codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_background_terminal_does_not_render_persistent_footer.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalize_snapshot_paths(rendered)
---
  1 background terminal running · /ps to view ·

────────────────────────────────────────────────
› Ask Codex to do anything
────────────────────────────────────────────────
  gpt-5.5 default · /tmp/project · bg 1 terminal
